--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Server for managing products and carts",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^3.1.9"
   }
 }
